--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ Showcases skills and experience -->
 
             <h3>Nice to meet you</h3>
 
-            <p>I am a sophomore at Cornell Engineering, preparing for a major in computer science and minor in cognitive science. Since getting to school
+            <p>I am a sophomore at Cornell Engineering, preparing for a major in computer science with minors in electrical engineering and cognitive science. Since getting to school
                 I have become involved in Cornell's Unmanned Air Systems team, freshman orientation programs, and greek life. If I am not at my desk,
-                you can find me at the gym or listening to classic rock. I use tabs.
+                you can find me at the gym or listening to classic rock. I use tabs, not spaces.
             </p>
 
             <img class = "header_hr" src = "res/img/empty_hr_dark_clean.png"/>
@@ -117,15 +117,14 @@ Showcases skills and experience -->
 
                 <div class = work_description right>
 
-                    <h5>Altium | Python | PySerial | Arduino | SimpleBGC 32-bit</h5>
+                    <h5>Altium | C | Python | Unix | Arduino</h5>
                     <h1>Electrical Team: <br> <a href = "http://cuair.engineering.cornell.edu/" target = "_blank">Cornell Unmanned Air Systems</a></h1>
                     <h3>Current</h3>
 
                     <p>
                         On the CUAir Electrical Team, I aid the development of an autonomous plane to represent my school in the Unmanned Air
                         Systems competition. My team's responsibilities include on-system computing, radio communications, and power distribution.
-                        During my first semester I worked on a circuit board to control cargo-dropping motors, and a stabilizing gimbal for the
-                        plane's camera.
+                        My main responsibilities have been developing our air \drop system, implementing a simulated remote information center, and choosing our on-board computer.
                     </p>
 
                 </div>
