--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Showcases skills and experience -->
 
             <h3>Nice to meet you</h3>
 
-            <p>I am a sophomore at Cornell Engineering, preparing for a major in computer science with minors in electrical engineering and cognitive science. Since getting to school
+            <p>I am a senior at Cornell Engineering, preparing for a major in computer science with minors in electrical engineering and cognitive science. Since getting to school
                 I have become involved in Cornell's Unmanned Air Systems team, freshman orientation programs, and greek life. If I am not at my desk,
                 you can find me at the gym or listening to classic rock. I use tabs, not spaces.
             </p>
