--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@ Showcases skills and experience -->
 
             <h3>Nice to meet you</h3>
 
-            <p>I am a senior at Cornell Engineering, preparing for a major in computer science with minors in electrical engineering and cognitive science. Since getting to school
-                I have become involved in Cornell's Unmanned Air Systems team, freshman orientation programs, and greek life. If I am not at my desk,
+            <p> Hello! This landing page was primarily while still at university. The work that I have been doing at Facebook
+                since graduation is not reflected here, but is summarized on my resume and LinkedIn!
+                
+                I am a recent graduate from Cornell Engineering. At school
+                I was involved in Cornell's Unmanned Air Systems team, and received a bachelor's in Computer Science. If I am not at my desk,
                 you can find me at the gym or listening to classic rock. I use tabs, not spaces.
             </p>
 
