--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Showcases skills and experience -->
             <a class = "mobile_button" href = "#work"> Work </a>
             <a class = "mobile_button" href = "http://www.github.com/jakepodell"> Code </a>
             <a class = "mobile_button" href = "#contact"> Contact </a>
-            <a class = "mobile_button" target="_blank" href = "res/Resume.pdf"> Resume </a>
+            <a class = "mobile_button" target="_blank" href = "res/Jake Podell.pdf"> Resume </a>
         </div>
 
         <div id = "header_container">
