--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Showcases skills and experience -->
                 
                 I am a recent graduate from Cornell Engineering. At school
                 I was involved in Cornell's Unmanned Air Systems team, and received a bachelor's in Computer Science. If I am not at my desk,
-                you can find me at the gym or listening to classic rock. I use tabs, not spaces.
+                you can find me at the gym or listening to classic rock.
             </p>
 
             <img class = "header_hr" src = "res/img/empty_hr_dark_clean.png"/>
