--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Showcases skills and experience -->
             <h3>Nice to meet you</h3>
 
             <p> Hello! This landing page was primarily while still at university. The work that I have been doing at Facebook
-                since graduation is not reflected here, but is summarized on my resume and LinkedIn!
+                since graduation is not reflected here, but is summarized on my resume and <a href="https://www.linkedin.com/in/jakepodell/" target="_blank>LinkedIn</a>!
                 
                 I am a recent graduate from Cornell Engineering. At school
                 I was involved in Cornell's Unmanned Air Systems team, and received a bachelor's in Computer Science. If I am not at my desk,
