--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Showcases skills and experience -->
 
     <div id = "work">
 
-        <h1 id = "work_heading">Recent Projects</h1>
+        <h1 id = "work_heading">Recent* Projects</h1>
 
         <hr>
 
@@ -204,7 +204,7 @@ Showcases skills and experience -->
             </div>
 
         </div>
-
+        * Deprecated 2017
     </div>
 
     <div id = "contact">
