--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Showcases skills and experience -->
                 <a class = "button" href = "#about"> About </a>
                 <a class = "button" href = "#work"> Work </a>
                 <a class = "button" href = "#contact"> Contact </a>
-                <a class = "button" target="_blank" href = "res/Resume.pdf"> Resume </a>
+                <a class = "button" target="_blank" href = "res/Jake Podell.pdf"> Resume </a>
                 <hr>
             </div>
 
