--- a/index.html
+++ b/index.html
@@ -204,8 +204,10 @@ Showcases skills and experience -->
             </div>
 
         </div>
-        * Deprecated 2017
+        
     </div>
+    
+    <p>Deprecated 2017</p>
 
     <div id = "contact">
 
