--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Showcases skills and experience -->
         
     </div>
     
-    <p>Deprecated 2017</p>
+    <p>*Deprecated 2017</p>
 
     <div id = "contact">
 
