--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
 <!-- HERO -->
 <section id="hero">
+  <canvas id="hero-canvas"></canvas>
   <div class="container">
     <div class="hero-eyebrow">Software Engineer · New York</div>
     <h1 class="hero-name">Jake Podell</h1>
-    <p class="hero-title">Frontend Engineer @ <span>Citadel Securities</span></p>
+    <p class="hero-title">Full Stack Technologist | <span>High Performance Web Applications</span></p>
     <div class="btn-group">
       <a href="res/Jake Podell.pdf" target="_blank" class="btn btn-primary">Resume</a>
       <a href="https://github.com/jakepodell" target="_blank" class="btn btn-outline">GitHub</a>
@@ -46,17 +47,17 @@
     <div class="section-label reveal">About</div>
     <h2 class="section-title reveal">Who I am</h2>
     <p class="about-text reveal">
-      I'm a <strong>software engineer</strong> based in New York, focused on building high-performance
+      I'm a <strong>software engineer</strong> based in New York, most recently focused on building high-performance
       frontend systems for financial markets. I graduated from <strong>Cornell University</strong>
-      (<em>Magna Cum Laude</em>, GPA 3.75) with a degree in Computer Science and minors in
-      Electrical Engineering and Cognitive Science.
+      where I studied computer science and built autonomous aerial vehicles.
     </p>
     <p class="about-text reveal" style="margin-top:16px;">
       I've spent the last several years shipping production software at scale — first at
-      <strong>Meta</strong>, and now at <strong>Citadel Securities</strong>. Before that I interned
-      every summer through college, building everything from iOS apps and drone electronics to
-      promotional web apps for Michael Kors. I care about fast, reliable interfaces and the kind of
+      <strong>Meta</strong>, and then at <strong>Citadel Securities</strong>. I care about fast, reliable interfaces and the kind of
       engineering craft that makes complex systems feel simple to use.
+    </p>
+    <p class="about-text reveal" style="margin-top:16px;">
+      I'm interested in a wide array of technologies, including <strong>hardware</strong> and <strong>AI systems</strong>, and I'm always looking for opportunities to learn and grow. When I'm not coding, you can find me snowboarding, at the gym, or spending too much money on keyboards. 
     </p>
   </div>
 </section>
@@ -181,6 +182,7 @@
       <span class="skill-pill">Git</span>
       <span class="skill-pill">Java</span>
       <span class="skill-pill">Swift</span>
+      <span class="skill-pill">Arduino</span>
     </div>
   </div>
 </section>
@@ -195,7 +197,6 @@
       <div class="edu-header">
         <div>
           <div class="edu-degree">B.S. Computer Science</div>
-          <div class="edu-minors">Minors in Electrical Engineering &amp; Cognitive Science</div>
         </div>
         <div class="edu-meta">
           <div class="edu-honors">Magna Cum Laude</div>
